[gd_scene load_steps=10 format=3 uid="uid://cbrd846x6b3ii"]

[ext_resource type="Script" path="res://main.gd" id="1_3ynba"]
[ext_resource type="Texture2D" uid="uid://dt7ucs16n5qh" path="res://1.png" id="1_e5cdh"]
[ext_resource type="PackedScene" uid="uid://da1ycs5u017q" path="res://note.tscn" id="3_svrfx"]
[ext_resource type="AudioStream" uid="uid://bspabttabae2q" path="res://sounds/e.wav" id="4_xi005"]
[ext_resource type="AudioStream" uid="uid://bygk8uqn00ek1" path="res://sounds/a.wav" id="5_ytogl"]
[ext_resource type="AudioStream" uid="uid://bbpbkckcych3p" path="res://sounds/d.wav" id="6_gton4"]
[ext_resource type="AudioStream" uid="uid://dyyqsi0mllp2n" path="res://sounds/g.wav" id="7_dis8y"]
[ext_resource type="AudioStream" uid="uid://r7g7sd35ja0x" path="res://sounds/b.wav" id="8_24jvh"]
[ext_resource type="AudioStream" uid="uid://b0wwmk1gc1s26" path="res://sounds/e_2.wav" id="9_l5wvj"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_3ynba")

[node name="1" type="Sprite2D" parent="."]
position = Vector2(-1937, 1403)
scale = Vector2(0.0913333, 0.0913333)
texture = ExtResource("1_e5cdh")

[node name="note" parent="." instance=ExtResource("3_svrfx")]
position = Vector2(-43, -156)

[node name="Fretboard" type="Node2D" parent="."]

[node name="E" type="ColorRect" parent="Fretboard"]
offset_left = 53.0
offset_right = 60.0
offset_bottom = 644.0
color = Color(0.25, 0.2875, 1, 1)

[node name="A" type="ColorRect" parent="Fretboard"]
offset_left = 92.0
offset_right = 100.0
offset_bottom = 641.0
color = Color(0.25, 0.2875, 1, 1)

[node name="D" type="ColorRect" parent="Fretboard"]
offset_left = 133.0
offset_top = -3.0
offset_right = 141.0
offset_bottom = 639.0
color = Color(0.25, 0.2875, 1, 1)

[node name="G" type="ColorRect" parent="Fretboard"]
offset_left = 171.0
offset_top = -5.0
offset_right = 179.0
offset_bottom = 633.0
color = Color(0.25, 0.2875, 1, 1)

[node name="B" type="ColorRect" parent="Fretboard"]
offset_left = 208.0
offset_top = 1.0
offset_right = 216.0
offset_bottom = 630.0
color = Color(0.25, 0.2875, 1, 1)

[node name="E2" type="ColorRect" parent="Fretboard"]
offset_left = 241.0
offset_right = 249.0
offset_bottom = 632.0
color = Color(0.25, 0.2875, 1, 1)

[node name="E_low_player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_xi005")

[node name="A_player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ytogl")

[node name="D_player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_gton4")

[node name="G_player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_dis8y")

[node name="B_player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_24jvh")

[node name="E_high_player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_l5wvj")

[node name="HitZone" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="HitZone"]
offset_left = 2.0
offset_top = 571.0
offset_right = 1077.0
offset_bottom = 651.0
